feat: added save functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/OnlineTestingPortalSchema?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/OnlineTestingPortalSchema?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = Sairam@27
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
