--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/OnlineTestingPortalSchema?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = Sairam@27
+spring.datasource.password = Local@1234
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+#cs0Z!1WFlFw7
